2004-06-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/if_index.c (if_nameindex): Use extend_alloca.

2004-06-28  GOTO Masanori  <gotom@debian.or.jp>

	* iconv/gconv_simple.c: Use get16/put16 for user given buffer
	in ucs2/ucs2reverse when unaligned memory access is attempted.
	* iconv/tst-iconv5.c: New file.
	* iconv/Makefile (tests): Add tst-iconv5.

2004-06-28  Jakub Jelinek  <jakub@redhat.com>

	* inet/bug-if1.c: Include <string.h>.

2004-06-19  Roland McGrath  <roland@redhat.com>

	* sysdeps/posix/waitid.c (do_waitid) [DO_WAITID]: Define function
	under this macro name instead.
	[NO_DO_WAITID]: Don't define it at all.
	(do_waitid) [WNOWAIT, WEXITED]: If these POSIX.1 waitid flag bits are
	defined, then return ENOTSUP for combinations of selection bits other
	than WEXITED and WEXITED|WSTOPPED, which this version cannot support.

	* posix/tst-waitid.c: New file.
	* posix/Makefile (tests): Add it.

2004-06-28  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/alpha/sysdep.h (inline_syscall6): Fix a typo.

	[BZ #231]
	* sysdeps/unix/alpha/sysdep.S (__syscall_error): Avoid !samegp
	relocation in librt.so.

	[BZ #230]
	* sysdeps/alpha/dl-machine.h (_dl_start_user): Use ldah/ldl to load
	_dl_skip_args.  Patch by Jakub Bogusz <qboosh@pld-linux.org>.

2004-06-27  Ulrich Drepper  <drepper@redhat.com>

	* elf/ldconfig.c (add_dir): Take chroot into account.
	Based on changes by HJ Lu and Hideki Iwamoto.

	* nscd/connections.c (invalidate_cache): If the host cache has to
	be invalidated, re-read resolv.conf.

	* resolv/resolv.h (RES_NOIP6DOTINT): Define.
	* resolv/res_init.c (res_setoptions): Handle no-ip6-dotint option.
	* resolv/gethnamaddr.c (gethostbyaddr): Don't lookup with .ip6.int
	if RES_NOIP6DOTINT flag is set.
	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyaddr_r): Likewise.

2004-06-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/fcntl.c: Move to...
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fcntl.c: ... here.