@@ -1,5 +1,7 @@
 2004-06-28  Ulrich Drepper  <drepper@redhat.com>
 
+	* inet/bug-if1.c (do_test): Simply use 0 as invalid index.
+
 	* sysdeps/unix/sysv/linux/if_index.c (if_nameindex): Use extend_alloca.
 
 2004-06-28  GOTO Masanori  <gotom@debian.or.jp>
